# qr_decoder

./: CMakeLists.txt  README.md
src/: main.cpp  qr_reader.cpp  qr_reader.h
